# fluent-agent

./: .gitignore  Makefile  README.md  pubspec.yaml
android/app/: build.gradle
fluent-lib/: .gitignore  Cargo.toml  Makefile  build.rs  clippy.toml
fluent-lib/src/: api_bridge.io.rs  api_bridge.rs  lib.rs
fluent-lib/src/app/: api.rs  assembler.rs  dto.rs  info.rs  mod.rs  param.rs  service.rs  service_test.rs
fluent-lib/src/common/: consts.rs  error.rs  log.rs  mod.rs  time.rs  types.rs  uniqueid.rs  version.rs
fluent-lib/src/domain/: mod.rs
fluent-lib/src/domain/config/: entity.rs  mod.rs  repo.rs  service.rs
fluent-lib/src/domain/log/: entity.rs  mod.rs  repo.rs  service.rs
fluent-lib/src/domain/proto/: entity.rs  mod.rs  param.rs  protobuf.rs  repo.rs  service.rs
fluent-lib/src/domain/tonic/: client.rs  entity.rs  mod.rs  service.rs
fluent-lib/src/domain/tonic/codec/: codec.rs  decode.rs  encode.rs  mod.rs
fluent-lib/src/infra/persistence/: mod.rs
fluent-lib/src/infra/persistence/config/: assembler.rs  db.rs  mod.rs  po.rs  repo.rs
fluent-lib/src/infra/persistence/log/: assembler.rs  db.rs  po.rs  repo.rs
fluent-lib/src/infra/persistence/proto/: assembler.rs  db.rs  file.rs  mod.rs  po.rs  repo.rs
fluent-test/: Makefile  go.mod  go.sum  main.go
fluent-test/proto/: common.pb.go  common.pb.validate.go  common.proto  message.pb.go  message.pb.validate.go  message.proto  message_no_pkg.pb.go  service.pb.go  (+11 more)
lib/: api_bridge.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+64 files in other folders)
